--- a/admin/index.html
+++ b/admin/index.html
@@ -19,7 +19,7 @@
             <nav>
                 <div class="logo">
                     <a href="index.html">
-                        <img src="assets/images/logo.png" alt="CeMoney Logo">
+                        <img src="../assets/images/logo.png" alt="CeMoney Logo">
                     </a>
                 </div>
                 <ul class="nav-links">
